feat: Move script tag to body
Moves the `<script type="module" src="/index.tsx"></script>` tag from the `<head>` to the `<body>` in `index.html`. This ensures that the DOM is fully loaded before the script attempts to render the React application, preventing potential runtime errors.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 }
 </script>
 </head>
-<body>
+  <body>
     <div id="root"></div>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
